[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ['robust_downloader*']

# Automatically determine version from package
[tool.setuptools.dynamic]
version = {attr = "robust_downloader.__version__"}

[project]
name = "robust-downloader"
readme = "README.md"

description = "A Simple Robust Downloader written in Python"
authors = [
    {name = "Federico Berto", email = "berto.federico2@gmail.com"},
  ]
dynamic = ["version"]

license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]

dependencies = [
    "tqdm",
    "colorlog",
    "requests",
]

[project.scripts]
robust-downloader = "robust_downloader.cli:main"


[project.optional-dependencies]
dev = ["black", "ruff", "pre-commit>=3.3.3", "pytest", "pytest-cov"]

[project.urls]
"Homepage" = "https://github.com/fedebotu/robust-downloader"
"Bug Tracker" = "https://github.com/fedebotu/robust-downloader/issues"

# Ruff + Black + isort combo for code formatting
# Adapted from https://github.com/AntonOsika/gpt-engineer (kudos!)
# https://beta.ruff.rs/docs/configuration/#using-pyprojecttoml
[tool.ruff]
select = ["F", "E", "W", "I001"]
line-length = 90
show-fixes = false
target-version = "py310"
task-tags = ["TODO", "FIXME"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
ignore = ["E501"] # never enforce `E501` (line length violations), done in Black

# Ignore `E402` (import violations) and "F401" (unused imports) in all `__init__.py` files
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.ruff.isort]
known-first-party = []
known-third-party = []
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
combine-as-imports = true
split-on-trailing-comma = false
lines-between-types = 1

# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html
[tool.black]
line-length = 90
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.direnv
    | \.eggs
    | \.git
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | venv
  )/
)
'''